// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> should render correctly 1`] = `
<fade-stub>
  <div class="modal"></div>
</fade-stub>
`;

exports[`<Modal /> should render the correct slot 1`] = `
<fade-stub>
  <div class="modal">Hello world!</div>
</fade-stub>
`;
